k8s/manifests/network-system/ingress-nginx/static-routes/minio/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio
  namespace: network-system
spec:
  type: ExternalName

  ports:
    - name: api
      port: 9000
    - name: http
      port: 9001

  externalName: hyperion.${INTERNAL_DOMAIN}
