k8s/manifests/network-system/ingress-nginx/static-routes/minio/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio
  namespace: network-system
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: ${CLUSTER_CERT}
    external-dns/is-public: "false"
    hajimari.io/enable: "false"

spec:
  tls:
    - secretName: tls.minio
      hosts:
        - "minio.${EXTERNAL_DOMAIN}"

  rules:
    - host: minio.${EXTERNAL_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio
                port:
                  name: http
    - host: s3.${EXTERNAL_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio
                port:
                  name: api
